# ai-scripts

./: .gitignore  README.md  prompt.md  pyproject.toml
scripts/: gh_release_fetch.py  playwright_automation.py  pt_browser_automation.py  telegram_message_archiver.py
