[project]
name = "ai-scripts"
version = "0.1.0"
description = "Independent utility scripts"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [ { name = "Unknown" } ]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
