[project]
name = "ai-scripts"
version = "0.1.0"
description = "Independent utility scripts"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [ { name = "Unknown" } ]
dependencies = [
    "black>=25.9.0",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "telethon>=1.41.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
